Finished working on my blog posts and services

--- a/quiz.html
+++ b/quiz.html
@@ -20,6 +20,45 @@
                   </ul>
                  </nav>
          </header>
+         <section>
+             <h2>My Blog Posts</h2>
+             <article>
+             <h3>Blog 1</h3>
+             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, at! <a href="https://www.youtube.com/watch?v=pSudEWBAYRE" target="_blanck"> Go to video </a>Sit ut, ducimus dolor rem nisi repellat ab omnis similique minima neque officia unde. <br>Beatae omnis voluptatibus labore doloribus debitis!</p>
+            </article>
+            <article>
+             <h3>Blog 2</h3>
+             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, at! <a href="https://www.youtube.com/watch?v=IdssuxDdqKk&list=PL0CjomK8XczzKwdNPn6Ov1l18XMLixEfY" target="_blanck">Go to video </a> Sit ut, ducimus dolor rem nisi repellat ab omnis similique minima neque officia unde. <br>Beatae omnis voluptatibus labore doloribus debitis!</p>
+            </article>
+             <article>
+            <h3>Blog 3</h3>
+             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, at! <a href="https://www.youtube.com/user/EXOK" target="_blanck">More videos </a>Sit ut, ducimus dolor rem nisi repellat ab omnis similique minima neque officia unde. <br>Beatae omnis voluptatibus labore doloribus debitis!</p>
+            </article>
+            <aside>
+                <h1>Top posts</h1>
+                <ul>
+                 <li> <a href="#"">Post 1</a></li>
+                 <li><a href="#">Post 2</a></li>
+                 <li><a href="#">Post 3</a></li>
+                 <li><a href="#">Post 4</a></li>
+               </ul>
+            </aside>
+         </section>
+         <section>
+             <h2>Services</h2>
+             <article>
+                <h3>Web Design</h3>
+                <p>The Best Designs is a curation of the best of web design and their designers, featured for design excellence. Millions of people from around the world visit The Best Designs to view the latest design trends, designers to hire or design inspiration. If you are looking for a talented web designer for your project, you can browse through the Web Designers. These freelance web designers and agencies have had at least one design featured here. Or if you want to create your own site, you can view our directory of some of the best WordPress Themes from our trusted theme partners.<a href="#">Learn more</a></p>
+               </article>
+               <article>
+                <h3>Content Writing</h3>
+                <p>Content writing is the process of planning, writing and editing web content, typically for digital marketing purposes. It can include writing blog posts and articles, scripts for videos and podcasts, as well as content for specific platforms, such as tweetstorms on Twitter or text posts on Reddit.<a href="#">Learn more</a></a></p>
+               </article>
+                <article>
+               <h3>Print & Packaging</h3>
+               <p>Southampton based Print & Packaging offer clients a way to promote their brand messages on high quality carrier bags, custom boxes, packaging and promotional items.<a href="#">Learn more </a></a></p>
+               </article>
+         </section>
     </main>
 </body>
 </html>
