Finished working on tabless

--- a/quiz.html
+++ b/quiz.html
@@ -56,7 +56,7 @@
                </article>
                 <article>
                <h3>Print & Packaging</h3>
-               <p>Southampton based Print & Packaging offer clients a way to promote their brand messages on high quality carrier bags, custom boxes, packaging and promotional items.<a href="#">Learn more </a></a></p>
+               <p>Southampton baseds Print & Packaging offer clients a way to promote their brand messages on high quality carrier bags, custom boxes, packaging and promotional items.<a href="#">Learn more </a></a></p>
                </article>
          </section>
     </main>
